test/tests/operators/summarize/frequency-zero.txt
error: `frequency` must be greater than zero
 --> tests/operators/summarize/frequency-zero.tql:6:46
  |
6 | summarize count=count(), options={frequency: 0s}
  |                                              ^^ 
  |
